[gd_scene load_steps=9 format=2]

[ext_resource path="res://source/world/GunSpawner.gd" type="Script" id=1]
[ext_resource path="res://assets/png/circle.png" type="Texture" id=2]
[ext_resource path="res://source/world/Gun.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/png/UpGlow.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]

resource_name = "Appear"
length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Gun:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -10, -30 ), Vector2( -10, -80 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Gun:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Gun:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("UpGlow:modulate")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.000139032, 0.300139 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.25098 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]

resource_name = "Disappear"
length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("UpGlow:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.25 ) ]
}

[sub_resource type="Animation" id=3]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Gun:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -10, -80 ), Vector2( -10, -100 ) ]
}

[sub_resource type="CircleShape2D" id=4]

custom_solver_bias = 0.0
radius = 46.0977

[node name="GunSpawner" type="Node2D" groups=[
"GunSpawners",
]]
script = ExtResource( 1 )
spawn_interval = 10.0
random_offset = 5

[node name="Circle" type="Sprite" parent="."]
scale = Vector2( 1, 0.6 )
z_index = -2
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="Gun" parent="." instance=ExtResource( 3 )]
position = Vector2( -10, -80 )
rotation = -0.523599
scale = Vector2( 0.995397, 1.01183 )
_sections_unfolded = [ "Offset", "Transform", "Visibility", "Z Index" ]

[node name="UpGlow" type="Sprite" parent="."]
position = Vector2( 0, -45 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Visibility", "Z Index" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("..")
autoplay = "Appear"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 0.5
anims/Appear = SubResource( 1 )
anims/Disappear = SubResource( 2 )
anims/Hover = SubResource( 3 )
next/Appear = "Hover"
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="Timer" type="Timer" parent="."]
process_mode = 1
wait_time = 30.0
one_shot = true
autostart = false

[node name="PickupArea" type="Area2D" parent="."]
visible = false
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="Shape" type="CollisionShape2D" parent="PickupArea"]
position = Vector2( 0, -65 )
shape = SubResource( 4 )

[connection signal="timeout" from="Timer" to="." method="_spawn_gun"]
[connection signal="area_entered" from="PickupArea" to="." method="_on_PickupArea_area_entered"]
[connection signal="area_exited" from="PickupArea" to="." method="_on_PickupArea_area_exited"]
